--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Netease Music</title>
+    <link rel="stylesheet" type="text/css" href="assets/nju/resource/bundle.css">
     <link rel="stylesheet" href="assets/nm/resource/bundle.css">
     <script src="assets/vendor.js" charset="utf-8"></script>
+    <script src="assets/nju/bundle.js" charset="utf-8"></script>
     <script src="assets/nm/bundle.js" charset="utf-8"></script>
 </head>
 <body>
