--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Netease Music</title>
-    <link rel="stylesheet" type="text/css" href="assets/nju/resource/bundle.css">
+    <title>Netease Music Juke Box</title>
+    <link rel="stylesheet" href="assets/nju/resource/bundle.css">
     <link rel="stylesheet" href="assets/nm/resource/bundle.css">
     <script src="assets/vendor.js" charset="utf-8"></script>
-    <script src="assets/nju/bundle.js" charset="utf-8"></script>
-    <script src="assets/nm/bundle.js" charset="utf-8"></script>
 </head>
 <body>
 
+    <script src="assets/nju/bundle.js" charset="utf-8"></script>
+    <script src="assets/nm/bundle.js" charset="utf-8"></script>
 </body>
 </html>
