--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Netease Music Juke Box</title>
     <link rel="stylesheet" href="assets/nm/resource/bundle.css" charset="utf-8">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1468560776_6394193.css">
     <script src="assets/vendor.js" charset="utf-8"></script>
 </head>
 <body>
